etg_derive/tests/cases/03_mandatory_serde_rename.stderr
error: no #[serde(rename = <target>)] attribute defined
 --> tests/cases/03_mandatory_serde_rename.rs:5:5
  |
5 |     B,
  |     ^
