etg_derive/tests/cases/03_mandatory_serde_rename.rs
#[derive(etg_derive::Tags)]
enum E {
    #[serde(rename = "a")]
    A,
    B,
    #[serde(rename = "c")]
    C,
}

fn main() {}
